samples/_failures_safe/1761076561_a3b55c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1180958.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_b1180958.c:162:32: error: expected ‘]’ at end of input
  162 |         printf("%s", names[type
      |                                ^
      |                                ]
./samples/SAFE/__tmp_b1180958.c:162:9: error: expected declaration or statement at end of input
  162 |         printf("%s", names[type
      |         ^~~~~~
./samples/SAFE/__tmp_b1180958.c:162:9: error: expected declaration or statement at end of input
